# nomad-lite

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.dev.yml  docker-compose.yml  tarpaulin.toml
.github/actions/rust-setup/: action.yml
.github/workflows/: ci.yml  docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  api-reference.md  architecture.md  cli-reference.md  getting-started.md  introduction.md  nomad-comparison.md  raft.md  security.md  testing.md
examples/: submit_job.rs
proto/: scheduler.proto
scripts/: gen-test-certs.sh
src/: config.rs  error.rs  lib.rs  main.rs  node.rs  shutdown.rs  tls.rs
src/dashboard/: index.html  mod.rs
src/grpc/: client_service.rs  cluster_service.rs  internal_service.rs  mod.rs  server.rs
src/raft/: mod.rs  node.rs  rpc.rs  state.rs  storage.rs  timer.rs
src/scheduler/: assigner.rs  job.rs  mod.rs  queue.rs
src/worker/: executor.rs  heartbeat.rs  mod.rs
tests/: backpressure_tests.rs  cancel_tests.rs  chaos_tests.rs  compaction_tests.rs  dashboard_tests.rs  distribution_tests.rs  drain_tests.rs  executor_tests.rs  failover_tests.rs  integration_tests.rs  internal_service_tests.rs  leadership_transfer_tests.rs  partition_tests.rs  persistence_tests.rs  raft_rpc_tests.rs  scheduler_tests.rs  test_harness.rs  tls_tests.rs
