[package]
name = "nomad-lite"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "net", "process", "fs", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
